Converted part of query show to react

--- a/app/views/blazer/queries/home.html.erb
+++ b/app/views/blazer/queries/home.html.erb
@@ -3,7 +3,7 @@
   var queryValues = <%= blazer_json_escape(@queries.to_json).html_safe %>;
 </script>
 
-<%= react_component("Queries") %>
+<%= react_component("QueriesHome") %>
 
 <!-- <div id="queries">
   <div id="header" style="margin-bottom: 20px;">
