--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -1,6 +1,6 @@
 /*
  *= require ./bootstrap
- *= require ./selectize.default
+ *= require ./react-select
  *= require ./github
  *= require ./daterangepicker-bs3
  *= require_self
