--- a/app/views/blazer/dashboards/show.html.erb
+++ b/app/views/blazer/dashboards/show.html.erb
@@ -1,6 +1,6 @@
 <% blazer_title @dashboard.name %>
 
-<div style="position: fixed; top: 0; left: 0; right: 0; background-color: whitesmoke; height: 60px; z-index: 1001;">
+<div class="topbar">
   <div class="container">
     <div class="row" style="padding-top: 13px;">
       <div class="col-sm-9">
