--- a/app/views/blazer/checks/_form.html.erb
+++ b/app/views/blazer/checks/_form.html.erb
@@ -1,3 +1,6 @@
+<% @js_bootstrap[:queries] = Blazer::Query.named.order(:name).select("id, name").map { |q| {text: q.name, value: q.id} } %>
+<% @js_bootstrap[:check] = @check %>
+
 <% unless @check.respond_to?(:invert) %>
   <p class="text-muted">Checks are designed to identify bad data. A check fails if there are any results.</p>
 <% end %>
@@ -12,12 +15,6 @@
     <div class="hide">
       <%= f.select :query_id, [], {include_blank: true} %>
     </div>
-    <script>
-      var queries = <%= blazer_json_escape(Blazer::Query.named.order(:name).select("id, name").map { |q| {text: q.name, value: q.id} }.to_json).html_safe %>;
-      var items = <%= blazer_json_escape([@check.query_id].compact.to_json).html_safe %>;
-
-      $("#check_query_id").selectize({options: queries, items: items, highlight: false, maxOptions: 100}).parents(".hide").removeClass("hide");
-    </script>
   </div>
 
   <% if @check.respond_to?(:check_type) %>
@@ -28,9 +25,6 @@
         <% check_options << ["Anomaly (most recent data point)", "anomaly"] if Blazer.anomaly_checks %>
         <%= f.select :check_type, check_options %>
       </div>
-      <script>
-        $("#check_check_type").selectize({}).parent().removeClass("hide");
-      </script>
     </div>
   <% elsif @check.respond_to?(:invert) %>
     <div class="form-group">
@@ -38,9 +32,6 @@
       <div class="hide">
         <%= f.select :invert, [["Any results (bad data)", false], ["No results (missing data)", true]] %>
       </div>
-      <script>
-        $("#check_invert").selectize({}).parent().removeClass("hide");
-      </script>
     </div>
   <% end %>
 
@@ -50,9 +41,6 @@
       <div class="hide">
         <%= f.select :schedule, Blazer.check_schedules.map { |v| [v, v] } %>
       </div>
-      <script>
-        $("#check_schedule").selectize({}).parent().removeClass("hide");
-      </script>
     </div>
   <% end %>
 
