--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -7,14 +7,12 @@
 
     <%= stylesheet_link_tag "blazer/application" %>
     <%= javascript_include_tag "blazer/application" %>
-    <script>
-      var runQueriesPath = <%= run_queries_path.to_json.html_safe %>;
-    </script>
     <% if blazer_maps? %>
       <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css" %>
       <%= javascript_include_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.js" %>
     <% end %>
     <%= csrf_meta_tags %>
+    <%= blazer_js_bootstrap %>
   </head>
   <body>
     <div class="container">
