--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -62,8 +62,8 @@ input.search:focus {
 }
 
 #editor {
-  display: none;
-  height: 160px;
+  /*display: none;*/
+  /*height: 160px;*/
 }
 
 .ace_print-margin-layer {
