--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -6,25 +6,13 @@
     editable: @query.editable?(blazer_user),
     success: @success,
     error: @error,
-    sql_errors: @sql_errors
+    sql_errors: @sql_errors,
+    statement: @statement,
+    adapter: Blazer.data_sources[@query.data_source].adapter
   }) %>
 
 
 <!--
-
-<% if @sql_errors.any? %>
-  <div class="alert alert-danger">
-    <ul>
-      <% @sql_errors.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<% if @query.description.present? %>
-  <p><%= @query.description %></p>
-<% end %>
 
 <% if @bind_vars.any? %>
   <form id="bind" method="get" action="<%= query_path(@query, variable_params) %>" class="form-inline" style="margin-bottom: 10px;">
@@ -123,43 +111,3 @@
     <input type="submit" class="btn btn-success" value="Run" style="vertical-align: top;" />
   </form>
 <% end %>
-
-<pre style="max-height: 236px; overflow: hidden;" onclick="this.style.maxHeight = 'none';"><code><%= @statement %></code></pre>
-
-<% if @success %>
-  <div id="results">
-    <p class="text-muted">Loading...</p>
-  </div>
-
-  <script>
-    function showRun(data) {
-      $("#results").html(data);
-      $("#results table").stupidtable().stickyTableHeaders({fixedOffset: 60});
-    }
-
-    function showError(message) {
-      $("#results").css("color", "red").html(message);
-    }
-
-    var data = <%= blazer_json_escape(variable_params.merge(statement: @statement, query_id: @query.id).to_json).html_safe %>;
-
-    runQuery(data, showRun, showError);
-  </script>
-<% end %>
-
-<% if %w[sql presto].include?(Blazer.data_sources[@query.data_source].adapter) %>
-  <script>
-    // do not highlight really long queries
-    // this can lead to performance issues
-    if ($("code").text().length < 10000) {
-      hljs.initHighlightingOnLoad();
-    }
-  </script>
-<% end %>
-
-<script>
-  $(".form-inline input, .form-inline select").change( function () {
-    submitIfCompleted($(this).closest("form"));
-  });
-</script>
- -->
