--- a/app/views/blazer/dashboards/_form.html.erb
+++ b/app/views/blazer/dashboards/_form.html.erb
@@ -1,5 +1,6 @@
 <%= react_component("DashboardsForm", {
   dashboard: @dashboard,
+  dashboard_queries: @dashboard.dashboard_queries.order(:position).map(&:query).as_json(only: [:id, :name]),
   queries: Blazer::Query.named.order(:name).select("id, name").as_json(only: [:id, :name]),
   variable_params: variable_params
   }) %>
