--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -9,5 +9,6 @@
     sql_errors: @sql_errors,
     statement: @statement,
     adapter: Blazer.data_sources[@query.data_source].adapter,
-    bind_vars: @bind_vars
+    bind_vars: @bind_vars,
+    smart_vars: @smart_vars
   }) %>
