--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -1,7 +1,7 @@
 <% blazer_title @query.name %>
 
 <%= react_component("QueriesShow", {
-    query: @query,
+    query: @query.as_json(methods: [:to_param]),
     variable_params: variable_params,
     editable: @query.editable?(blazer_user),
     success: @success,
