--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -14,7 +14,9 @@
         <%= link_to "Fork", new_query_path(variable_params.merge(fork_query_id: @query.id, data_source: @query.data_source, name: @query.name)), class: "btn btn-info" %>
 
         <% if !@error && @success %>
-          <%= button_to "Download", run_queries_path(query_id: @query.id, format: "csv"), params: {statement: @statement}, class: "btn btn-primary" %>
+          <% ['csv', 'json'].each do |format| %>
+            <%= button_to format.upcase, run_queries_path(query_id: @query.id, format: format.downcase), params: {statement: @statement}, class: "btn btn-primary" %>
+          <% end %>
         <% end %>
       </div>
     </div>
