--- a/app/views/blazer/queries/show.html.erb
+++ b/app/views/blazer/queries/show.html.erb
@@ -139,7 +139,9 @@
 
 <% if @success %>
   <div id="results">
-    <p class="text-muted">Loading...</p>
+    <p class="text-muted">
+      Loading... <span id="timer"></span>
+    </p>
   </div>
 
   <script>
