Fixed command L - closes #53

--- a/app/views/blazer/queries/_form.html.erb
+++ b/app/views/blazer/queries/_form.html.erb
@@ -88,6 +88,8 @@
     },
     readOnly: false // false if this command should not apply in readOnly mode
   });
+  // fix command+L
+  editor.commands.removeCommands(["gotoline"]);
 
  // http://stackoverflow.com/questions/11584061/
  function adjustHeight() {
