Toggle code expansion

--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -165,3 +165,12 @@ input.search:focus {
 #header a.active {
   color: #999;
 }
+
+#code {
+  max-height: 236px;
+  overflow: hidden;
+}
+
+#code.expanded {
+  max-height: none;
+}
