--- a/app/views/layouts/blazer/application.html.erb
+++ b/app/views/layouts/blazer/application.html.erb
@@ -11,6 +11,8 @@
     <script>
       var runQueriesPath = <%= run_queries_path.to_json.html_safe %>;
       var cancelQueriesPath = <%= cancel_queries_path.to_json.html_safe %>;
+      var schemaPath = <%= schema_queries_path.to_json.html_safe %>;
+      var tablesPath = <%= tables_queries_path.to_json.html_safe %>;
     </script>
     <% if blazer_maps? %>
       <%= stylesheet_link_tag "https://api.mapbox.com/mapbox.js/v2.4.0/mapbox.css" %>
