--- a/app/assets/stylesheets/blazer/application.css
+++ b/app/assets/stylesheets/blazer/application.css
@@ -3,6 +3,7 @@
  *= require ./selectize.default
  *= require ./github
  *= require ./daterangepicker-bs3
+ *= require ./mapbox
  *= require_self
  */
 
